# Problem-Solving

./: CMakeLists.txt  test.cpp
C++/Other/: nirvana.cpp  teleport.cpp
LIT/: bookshelf.cpp  clique.cpp  ifelse.py  knapsack.cpp  sample.cpp  test1.in  test2.in
Other/: cowdance.cpp  reststops.cpp  sort.cpp  test.cpp
Proco/2019 Contest/: assemble.cpp  blackpanther.cpp  hawkeye.cpp  scarletwitch.cpp  test.cpp  thor.cpp
Proco/Practice 2018/: gladiator.cpp
USACO Contest/2019 Dec/: pump.cpp
USACO Contest/2019 Jan/: perimeter.cpp  planting3.cpp
USACO Contest/2019 Jan Gold/: poetry.cpp
USACO Contest/2020 US Open/: fcolor.cpp  haircut.cpp
USACO Practice/Gold/: bookshelf.cpp  coldwat.cpp  coldwat2.cpp  ddayz.cpp  divgold.cpp  divgoldcheese.cpp  events.cpp  hayfeast.cpp  hideseek2.cpp  mkmoney.cpp  pageant.cpp  paint.cpp  (+12 more)
USACO Practice/Gold 2/: bds.cpp  bestspot.cpp  buyhay.cpp  castle.cpp  catchcow.cpp  cbuying.cpp  cgiving2.cpp  cigiving.cpp  cline.cpp  clumsy.cpp  comehome.cpp  contest.cpp  cowdance.cpp  cowjog.cpp  cowroute.cpp  cowrun.cpp  danger.cpp  delivery.cpp  diet.cpp  dijkstra.cpp  dijkstra2.cpp  hideseek.cpp  hps.cpp  hurdles.cpp  irrigation.cpp  knapsack.cpp  lcs.cpp  lcs2.cpp  lines.cpp  lis.cpp  lookup.cpp  mst2.cpp  mud.cpp  paren.cpp  picnic.cpp  prefix.cpp  profits.cpp  rblock.cpp  sandcas.cpp  scales.cpp  (+8 more)
USACO Practice/Gold 3/: alliance.cpp  ccski.cpp  chocmilk.cpp  cruise.cpp  flow.cpp  fpot.cpp  frameup.cpp  fruitfeast.cpp  game1.cpp  lilypad.cpp  lilypad2.cpp  lilypad3.cpp  permutations.cpp  photo.cpp  piepie.cpp  pogocow.cpp  ttravel.cpp
(+174 files in other folders)
