cmake_minimum_required(VERSION 3.17)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 14)



add_executable(lilypad3 "USACO Practice/Gold 3/lilypad3.cpp" "USACO Practice/Gold 3/cruise.cpp" "USACO Practice/Gold 3/chocmilk.cpp" "USACO Practice/Gold 3/frameup.cpp" "USACO Practice/Gold 3/permutations.cpp")
add_executable(cruise "USACO Practice/Gold 3/cruise.cpp")
add_executable(chocmilk "USACO Practice/Gold 3/chocmilk.cpp")
add_executable(frameup "USACO Practice/Gold 3/frameup.cpp")
add_executable(permutations "USACO Practice/Gold 3/permutations.cpp")